# docs/swagger.yaml
@@ -33,6 +33,19 @@ definitions:
       msg:
         type: string
     type: object
+  model.Route:
+    properties:
+      end_spot:
+        type: string
+      end_time:
+        type: string
+      start_spot:
+        type: string
+      start_time:
+        type: string
+      user_id:
+        type: string
+    type: object
   model.UpdatePwdInfo:
     properties:
       new:
@@ -89,6 +102,27 @@ definitions:
         type: string
       status:
         type: string
+      ymd:
+        description: 年月日
+        type: string
+    type: object
+  model.VeRequirePassenger:
+    properties:
+      end_spot:
+        type: string
+      end_time:
+        type: string
+      notes:
+        type: string
+      start_spot:
+        type: string
+      start_time:
+        type: string
+      status:
+        type: integer
+      urgent:
+        description: 紧急情况,1为紧急,2为非紧急,如果没有则视为非紧急
+        type: integer
       ymd:
         description: 年月日
         type: string
@@ -269,6 +303,199 @@ paths:
       summary: 通过常用路径来添加部分订单信息
       tags:
       - driver
+  /passenger:
+    delete:
+      consumes:
+      - application/json
+      description: 乘客删除订单
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"msg":"success"}'
+          schema:
+            $ref: '#/definitions/model.Res'
+        "400":
+          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
+            "message":"Lack Param Or Param Not Satisfiable."}'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"database does not open successful"}
+            失败'
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: 乘客订单
+      tags:
+      - driver
+    get:
+      consumes:
+      - application/json
+      description: 显示订单信息,点击 订单详情页 时调用
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.VeRequirePassenger'
+        "400":
+          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
+            "message":"Lack Param Or Param Not Satisfiable."}'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"Fail."} 失败'
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: 显示订单信息
+      tags:
+      - passenger
+    post:
+      consumes:
+      - application/json
+      description: 乘客创造新的订单
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 乘客需要填写的信息,注意年月日需要以xx年xx月xx日的形式填写,status表示该订单是否完成,1为未完成,2为已完成
+        in: body
+        name: tmprequirement
+        required: true
+        schema:
+          $ref: '#/definitions/model.VeRequirePassenger'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"msg":"success", "pid":"string"}'
+          schema:
+            $ref: '#/definitions/model.Res'
+        "400":
+          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
+            "message":"Lack Param Or Param Not Satisfiable."}'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"database does not open successful"}
+            失败'
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: 乘客订单
+      tags:
+      - passenger
+  /passenger/:id:
+    get:
+      consumes:
+      - application/json
+      description: 在路径中,点击 创建新订单 时调用
+      parameters:
+      - description: 常用路径的id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.VeRoute'
+        "400":
+          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
+            "message":"Lack Param Or Param Not Satisfiable."}'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"Fail."} 失败'
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: 通过常用路径来添加部分订单信息
+      tags:
+      - passenger
+  /route:
+    post:
+      consumes:
+      - application/json
+      description: 用户创造新的常用路径
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 用户需要填写的信息
+        in: body
+        name: tmprequirement
+        required: true
+        schema:
+          $ref: '#/definitions/model.Route'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"msg":"success", "pid":"string"}'
+          schema:
+            $ref: '#/definitions/model.Res'
+        "400":
+          description: '{"error_code":"00001", "message":"Fail."} or {"error_code":"00002",
+            "message":"Lack Param Or Param Not Satisfiable."}'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "401":
+          description: '{"error_code":"10001", "message":"Token Invalid."} 身份认证失败
+            重新登录'
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: '{"error_code":"30001", "message":"database does not open successful"}
+            失败'
+          schema:
+            $ref: '#/definitions/handler.Error'
+      summary: 常用路径
+      tags:
+      - route
   /users:
     get:
       consumes:
