# handler/passenger/deleterqt.go
@@ -7,6 +7,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary 乘客订单
+// @Description 乘客删除订单
+// @Tags driver
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {object} model.Res "{"msg":"success"}"
+// @Failure 401 {object} handler.Error "{"error_code":"10001", "message":"Token Invalid."} 身份认证失败 重新登录"
+// @Failure 400 {object} handler.Error "{"error_code":"00001", "message":"Fail."} or {"error_code":"00002", "message":"Lack Param Or Param Not Satisfiable."}"
+// @Failure 500 {object} handler.Error "{"error_code":"30001", "message":"database does not open successful"} 失败"
+// @Router /passenger [delete]
 func DeletePassengerRequirement(c *gin.Context) {
 	var token *model.JwtClaims
 	var s string
