# handler/passenger/rqt.go
@@ -7,6 +7,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary 显示订单信息
+// @Description 显示订单信息,点击 订单详情页 时调用
+// @Tags passenger
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {object} model.VeRequirePassenger "成功"
+// @Failure 401 {object} handler.Error "{"error_code":"10001", "message":"Token Invalid."} 身份认证失败 重新登录"
+// @Failure 400 {object} handler.Error "{"error_code":"00001", "message":"Fail."} or {"error_code":"00002", "message":"Lack Param Or Param Not Satisfiable."}"
+// @Failure 500 {object} handler.Error "{"error_code":"30001", "message":"Fail."} 失败"
+// @Router /passenger [get]
 func ViewPassengerRequirement(c *gin.Context) {
 	var token *model.JwtClaims
 	var s string
@@ -25,13 +36,12 @@ func ViewPassengerRequirement(c *gin.Context) {
 		return
 	}
 	c.JSON(200, gin.H{
-		"msg":        "Success",
 		"ymd":        tmpRt.Ymd,
 		"start_time": tmpRt.StartTime,
 		"end_time":   tmpRt.EndTime,
 		"start_spot": tmpRt.StartSpot,
 		"end_spot":   tmpRt.EndSpot,
-		"status":     tmpRt.Status,
+		"status":     ChangeStatus(tmpRt.Status),
 		"notes":      tmpRt.Notes,
 		"urgent":     tmpRt.Urgent,
 		"phone":      model.GetPhone(pid),
@@ -39,6 +49,18 @@ func ViewPassengerRequirement(c *gin.Context) {
 	return
 }
 
+// @Summary 通过常用路径来添加部分订单信息
+// @Description 在路径中,点击 创建新订单 时调用
+// @Tags passenger
+// @Accept json
+// @Produce json
+// @Param id path int true "常用路径的id"
+// @Param token header string true "token"
+// @Success 200 {object} model.VeRoute "成功"
+// @Failure 401 {object} handler.Error "{"error_code":"10001", "message":"Token Invalid."} 身份认证失败 重新登录"
+// @Failure 400 {object} handler.Error "{"error_code":"00001", "message":"Fail."} or {"error_code":"00002", "message":"Lack Param Or Param Not Satisfiable."}"
+// @Failure 500 {object} handler.Error "{"error_code":"30001", "message":"Fail."} 失败"
+// @Router /passenger/:id [get]
 //通过常用路线显示将要发布的订单部分信息
 func ViewPRequirement(c *gin.Context) {
 	id := c.GetInt("id")
@@ -59,4 +81,16 @@ func ViewPRequirement(c *gin.Context) {
 		"user_phone": user.Phone,
 	})
 
+}
+
+func ChangeStatus(status int) string {
+	if status == 1 {
+		return "待确认"
+	}
+
+	if status == 2 {
+		return "已确认"
+	}
+
+	return "获取信息失败"
 }
